--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <title>Alarm Clock</title>
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="./icon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./icon.ico" type="image/x-icon">
   </head>
   <body>
     <div class="wrapper">
-      <img src="./icon.png" alt="clock">
+      <img src="./icon.ico" alt="clock">
       <h1>00:00:00 PM</h1>
       <div class="content">
         <div class="column">
