--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <img src="./icon.ico" alt="clock">
+      <img src="./icon.ico" alt="Alarm Clock">
       <h1>00:00:00 PM</h1>
       <div class="content">
         <div class="column">
